# Two-Layer-CTMC

./: .gitignore  MANIFEST.in  MicroEngine.py  MicroMacro.py  MicroMacroEngine.py  Micro_simulator copy 2.py  Micro_simulator.py  README.md  Solid_simulator.py  config.json  expansion_analysis.py  history.md  ideas.txt  micromacro.py  micromacro2.py  micromacro_lag_analysis.tex  network.py  network_visualization.py  pyproject.toml  requirements.txt  visualization.py
data copy/Simulations_MicroMacro_2/: 1.csv  10.csv  100.csv  101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  107.csv  108.csv  109.csv  11.csv  110.csv  111.csv  112.csv  113.csv  114.csv  115.csv  116.csv  117.csv  118.csv  119.csv  12.csv  120.csv  121.csv  122.csv  123.csv  124.csv  125.csv  126.csv  127.csv  128.csv  129.csv  13.csv  130.csv  131.csv  132.csv  133.csv  134.csv  (+258 more)
data copy/Simulations_MicroMacro_hazard_updated/: 1.csv  10.csv  100.csv  101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  107.csv  108.csv  109.csv  11.csv  110.csv  111.csv  112.csv  113.csv  114.csv  115.csv  116.csv  117.csv  118.csv  119.csv  12.csv  120.csv  121.csv  122.csv  124.csv  125.csv  126.csv  127.csv  128.csv  129.csv  13.csv  130.csv  131.csv  132.csv  133.csv  134.csv  135.csv  (+256 more)
data copy/Simulations_Solid/: 1.csv  10.csv  100.csv  101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  107.csv  108.csv  109.csv  11.csv  110.csv  (+286 more)
devtools/: batch.py  config.py  visualize.py
two_layer_ctmc/: __init__.py  macro_engine.py  micro_engine.py  micro_model.py  network.py  orchestrator.py  simulate.py  types.py
(+10 files in other folders)
